@@ -11,17 +11,12 @@ namespace UiBot
         [STAThread]
         static void Main(string[] args)
         {
+            SettingsManager.LoadSettings();
             // Ensure necessary directories exist by calling the IntegrityCheck method
             IntegrityCheck.EnsureDirectoriesExist();
-            SettingsManager.LoadSettings();
-
             // To customize application configuration such as set high DPI settings or default font,
             // see https://aka.ms/applicationconfiguration.
             ApplicationConfiguration.Initialize();
-
-            // Load settings from file
-
-
 
             // Run the main form (or your application's main UI)
             Application.Run(new ModernMenu());
